
PROJECT(extend)
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

SET(CMAKE_BUILD_TYPE Debug)
SET(CMAKE_CXX_FLAGS       "${CMAKE_CXX_FLAGS} -O2 -m64 -fPIC")
SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -g -O0 -m64 -fPIC")
SET(LIBRARY_OUTPUT_PATH "${extend_SOURCE_DIR}")
SET(CMAKE_VERBOSE_MAKEFILE OFF)

INCLUDE_DIRECTORIES(
	${extend_SOURCE_DIR}/third/inc
	${extend_SOURCE_DIR}/vector2/VecCrossSer
)

LINK_DIRECTORIES(
	${extend_SOURCE_DIR}
	${extend_SOURCE_DIR}/vector2
	${extend_SOURCE_DIR}/third/lib
)

ADD_SUBDIRECTORY(vector2)

ADD_LIBRARY(extend SHARED
	${extend_SOURCE_DIR}/extend.cpp
)

TARGET_LINK_LIBRARIES(extend Vector2 python2.7)

